--- a/ilovemyg.css
+++ b/ilovemyg.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #75a9d6;
+    background-color: #b27eb4;
     margin: 0;
     font-family: Arial, sans-serif;
 }
