--- a/flower_style.css
+++ b/flower_style.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #799fc0;
+    background-color: #b27eb4;
     margin: 0;
     font-family: Arial, sans-serif;
     flex-direction: column;
